# floor-monitor

./: .gitignore  CLAUDE.md  KNOWLEDGE.md  README.md
.github/workflows/: ci.yml
camera/: camera.toml.example
camera/python/: camera_client.py  requirements.txt
camera/rust/: Cargo.toml
camera/rust/src/: commands.rs  config.rs  lib.rs  main.rs
camera/rust/src/ptz/: detect.rs  fake.rs  mod.rs  noop.rs  patrol.rs  v4l2ctl.rs
camera/rust/tests/: caps_tests.rs  config_tests.rs  hw_tests.rs  ptz_tests.rs
docs/: PTZ_HARDWARE_LOG.md
server/: Cargo.toml  config.toml.example
server/profiles/: kid.toml  office.toml  retail.toml  security.toml
server/src/: alert.rs  asr.rs  config.rs  lib.rs  llm.rs  main.rs  monitor.rs  routes.rs  state.rs  telegram.rs  vlm.rs  ws.rs
server/static/css/: style.css
server/static/js/: dashboard.js
server/templates/: base.html  dashboard.html
server/tests/: api_tests.rs  e2e_tests.rs  unit_tests.rs
