[package]
name = "floor-monitor-server"
version = "0.1.0"
edition = "2021"
description = "WebSocket server for VLM camera monitoring with web UI and Telegram bot"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tera = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "multipart"] }
futures-util = "0.3"
tokio-tungstenite = "0.26"
async-stream = "0.3"

[dev-dependencies]
tokio-tungstenite = "0.26"
tempfile = "3"
