[package]
name = "floor-monitor-camera"
version = "0.1.0"
edition = "2021"
description = "Camera client for floor-monitor — captures frames and streams to server via WebSocket"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nokhwa = { version = "0.10", features = ["input-native"] }
image = { version = "0.25", features = ["jpeg"] }
url = "2"
